force-app/main/default/objects/Beneficial_Owner__c/fields/cm_City__c.field-meta.xml
<CustomField>
    <fullName>cm_City__c</fullName>
    <description>Physical City of the Beneficial Owner</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>