force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>cm_Date_of_Birth__c</fullName>
    <description>Date of Birth of the Beneficial Owner</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>