force-app/main/default/objects/Beneficial_Owner__c/fields/cm_First_Name__c.field-meta.xml
<CustomField>
    <fullName>cm_First_Name__c</fullName>
    <description>First Name of the Beneficial Owner</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>