force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>cm_Last_Name__c</fullName>
    <description>Last Name of the Beneficial Owner</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>