force-app/main/default/objects/Beneficial_Owner__c/fields/cm_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>cm_of_Ownership__c</fullName>
    <description>% of Ownership the Beneficial Owner has of the Company.</description>
    <label>% of Ownership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>