force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>cm_Physical_Address__c</fullName>
    <description>Physical Street Address of the Beneficial Owner</description>
    <label>Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>