force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Relationship__c.field-meta.xml
<CustomField>
    <fullName>cm_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the relationship record of the company that the beneficial owner has ownership in.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficial Owners</relationshipLabel>
    <relationshipName>Beneficial_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>