force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>cm_Social_Security_Number__c</fullName>
    <description>SSN of the Beneficial Owner</description>
    <label>Social Security Number</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>