force-app/main/default/objects/Beneficial_Owner__c/fields/cm_State__c.field-meta.xml
<CustomField>
    <fullName>cm_State__c</fullName>
    <description>Physical State of the Beneficial Owner</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
    </valueSet>
</CustomField>