force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Title__c.field-meta.xml
<CustomField>
    <fullName>cm_Title__c</fullName>
    <description>Title of the Beneficial Owner</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>