force-app/main/default/objects/Beneficial_Owner__c/fields/cm_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>cm_Zip_Code__c</fullName>
    <description>Physical Zip Code of the Beneficial Owner</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>