force-app/main/default/objects/Beneficial_Owner__c/fields/Controlling_Individual__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Individual__c</fullName>
    <description>Indicates if the beneficial owner is also the controlling individual.</description>
    <label>Controlling Individual?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>